;;
;; Django Firm Info package
;;
[metadata]
name = django-firm-info
version = 0.1.0
description = A Django application package for storage firm info
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Philippe Lafaye
author_email = lafaye@emencia.com
url = https://github.com/emencia/django-firm-info
project_urls =
    Source Code = https://github.com/emencia/django-firm-info
    Issue Tracker = https://github.com/emencia/django-firm-info/issues
    Changelog = https://django-firm-info.readthedocs.io/en/latest/history.html
    Documentation = https://django-firm-info.readthedocs.io/
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=3.2
    django-smart-media>=0.3.0
		djangocms-text-ckeditor>=5.1.3
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
quality =
    flake8
    tox
doc =
    sphinx>=4.3.0
    sphinx-rtd-theme==1.1.0
    livereload
release =
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{38,39,310}-django{32,40,41,42}

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]

deps =
    django32: Django>=3.2,<4.0
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<5.0
    py38-django32: backports.zoneinfo

commands =
    pip install -e .[dev]
    pytest -vv tests
