;;
;; Django Firm Info package
;;
[metadata]
name = django-firm-info
version = 0.2.3
description = A Django application package for storage firm info
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Philippe Lafaye
author_email = lafaye@emencia.com
url = https://github.com/emencia/django-firm-info
project_urls =
    Source Code = https://github.com/emencia/django-firm-info
    Issue Tracker = https://github.com/emencia/django-firm-info/issues
    Changelog = https://django-firm-info.readthedocs.io/en/latest/history.html
    Documentation = https://django-firm-info.readthedocs.io/
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
include_package_data = True
install_requires =
    Django>=4.2
    django-smart-media>=0.3.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-django>=4.0.0
    factory-boy>=3.3.0
    pyquery>=2.0.0
    freezegun>=1.2.0
debug =
    django-debug-toolbar>=4.4.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0
    gitchangelog
    makotemplate

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =
#     py{38,39,310}-django{32,42}
    {py39}-django42-cms410,
    {py311}-django{42,51},
    {py311}-django{42,51}-cms410,

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]

deps =
    cms311: django-cms>=3.11.0,<4.0
    cms410: django-cms>=4.1.0,<4.2.0
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django52: Django>=5.2,<6.0

commands =
    pip install -e .[dev]
    pytest -vv tests
